fix include dir and ln some headers for compat

--- a/archivers/minizip/Makefile
+++ b/archivers/minizip/Makefile
@@ -18,6 +18,13 @@ GH_PROJECT=	minizip-ng
 CMAKE_ON=	BUILD_SHARED_LIBS \
 		MZ_BUILD_TESTS # build executable "tests": minizip/minigzip
 
-CMAKE_ARGS=	-DINSTALL_INC_DIR=${PREFIX}/include/${PORTNAME}
+CMAKE_ARGS=	-DINSTALL_INC_DIR=${INCLUDEDIR} \
+		-DCMAKE_INSTALL_INCLUDEDIR=${INCLUDEDIR}
+
+INCLUDEDIR=${PREFIX}/include/${PORTNAME}
+
+post-install:
+	${RLN} ${STAGEDIR}${INCLUDEDIR}/mz_compat.h ${STAGEDIR}${INCLUDEDIR}/ioapi.h
+	${RLN} ${STAGEDIR}${INCLUDEDIR}/mz_crypt.h ${STAGEDIR}${INCLUDEDIR}/crypt.h
 
 .include <bsd.port.mk>
